[gd_scene load_steps=38 format=3 uid="uid://c808a2n8ll066"]

[ext_resource type="PackedScene" uid="uid://bjyhlfqw31xgp" path="res://scenes/actividades/arrastrable.tscn" id="1_4v3nf"]
[ext_resource type="Script" path="res://assets/scripts/nucleo_01/actividad_01.gd" id="1_cd5ww"]
[ext_resource type="Texture2D" uid="uid://3s6fxh81ocgc" path="res://img/nucleo_1/tarea_1/carpeta_uno.png" id="2_kqid0"]
[ext_resource type="Texture2D" uid="uid://bvotpldf8xvud" path="res://img/nucleo_1/background/linea_1_1.png" id="2_xd4ba"]
[ext_resource type="Texture2D" uid="uid://qyyv5at5ro6m" path="res://img/nucleo_1/background/linea_1_2.png" id="3_8ew0x"]
[ext_resource type="PackedScene" uid="uid://bv8bnjs72yogm" path="res://scenes/actividades/destino.tscn" id="3_64hak"]
[ext_resource type="Texture2D" uid="uid://bve6g1h7432x5" path="res://img/nucleo_1/tarea_1/cuadro_uno.png" id="4_h2gvu"]
[ext_resource type="Texture2D" uid="uid://rnbdlnsfhv3g" path="res://img/nucleo_1/background/linea_1_3.png" id="4_jplps"]
[ext_resource type="Texture2D" uid="uid://ca1dfawlhsowg" path="res://img/nucleo_1/background/linea_1_4.png" id="5_28d7x"]
[ext_resource type="Texture2D" uid="uid://baqsf7o1ricki" path="res://img/nucleo_1/background/linea_1_5.png" id="6_16mt3"]
[ext_resource type="Texture2D" uid="uid://mcroa8ug2lqd" path="res://img/nucleo_1/tarea_1/cuadro_dos.png" id="6_khidi"]
[ext_resource type="Texture2D" uid="uid://b6x2dfhl8lu54" path="res://img/nucleo_1/background/linea_1_6.png" id="7_c882e"]
[ext_resource type="Texture2D" uid="uid://b0y40ff51p2bq" path="res://img/nucleo_1/tarea_1/carpeta_dos.png" id="7_ufosa"]
[ext_resource type="Texture2D" uid="uid://bckih5184ir6k" path="res://img/nucleo_1/background/linea_1_7.png" id="8_8mdfi"]
[ext_resource type="Texture2D" uid="uid://fridfamxi862" path="res://img/nucleo_1/background/linea_1_8.png" id="9_mq21t"]
[ext_resource type="Texture2D" uid="uid://cwkfo1lxfrxdw" path="res://img/nucleo_1/background/linea_1_9.png" id="10_5l0sg"]
[ext_resource type="Texture2D" uid="uid://bcpnujnltiug0" path="res://img/nucleo_1/background/linea_1_10.png" id="11_031wn"]
[ext_resource type="Texture2D" uid="uid://bvu67qdbisx7t" path="res://img/nucleo_1/background/linea_1_11.png" id="12_swo43"]
[ext_resource type="Texture2D" uid="uid://biimii12ywts0" path="res://img/nucleo_1/background/linea_1_12.png" id="13_2fmam"]
[ext_resource type="Texture2D" uid="uid://sf4vshoabw7" path="res://img/nucleo_1/background/linea_1_13.png" id="14_o2vrr"]
[ext_resource type="Texture2D" uid="uid://b55da67a6hjyj" path="res://img/nucleo_1/background/linea_1_14.png" id="15_k0nwp"]
[ext_resource type="Texture2D" uid="uid://dog20e0uyqe2c" path="res://img/nucleo_1/background/linea_1_15.png" id="16_n1j84"]
[ext_resource type="Texture2D" uid="uid://depoctwkd6601" path="res://img/nucleo_1/background/linea_1_16.png" id="17_vmyiy"]
[ext_resource type="Texture2D" uid="uid://d46a5bntjuqj" path="res://img/nucleo_1/background/linea_1_17.png" id="18_f6hyo"]
[ext_resource type="Texture2D" uid="uid://bb4h1rgtwpb5y" path="res://img/nucleo_1/background/linea_1_18.png" id="19_yesgn"]
[ext_resource type="Texture2D" uid="uid://b68rmtcjt57wr" path="res://img/nucleo_1/background/linea_1_19.png" id="20_ufvly"]
[ext_resource type="Texture2D" uid="uid://c74jwph00mmy6" path="res://img/nucleo_1/tarea_1/borde.png" id="21_kvr8a"]
[ext_resource type="Texture2D" uid="uid://bbpw6nxrjqcr4" path="res://img/nucleo_1/tarea_1/fondo.png" id="22_3cos1"]
[ext_resource type="Texture2D" uid="uid://d36vio6sxpyfo" path="res://img/nucleo_1/tarea_1/encuesta_dos.png" id="29_bp2aq"]
[ext_resource type="Texture2D" uid="uid://b5ac4pu5528x6" path="res://img/nucleo_1/tarea_1/encuesta_uno.png" id="30_7wokn"]
[ext_resource type="Texture2D" uid="uid://b2jd8fr7l5vjf" path="res://img/nucleo_1/tarea_1/carpeta_dos_bien.png" id="31_xct85"]
[ext_resource type="Texture2D" uid="uid://busg2tttnauk5" path="res://img/nucleo_1/tarea_1/carpeta_uno_bien.png" id="32_6soqr"]
[ext_resource type="PackedScene" uid="uid://dpc8cgudrxdle" path="res://scenes/actividades/arrastrar_anim.tscn" id="35_4na0n"]
[ext_resource type="Texture2D" uid="uid://bwdne6wqr60gg" path="res://img/nucleo_1/tarea_1/info.png" id="35_v2p63"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="35_w7jnl"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="36_84els"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cqqxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xd4ba")
}, {
"duration": 1.0,
"texture": ExtResource("3_8ew0x")
}, {
"duration": 1.0,
"texture": ExtResource("4_jplps")
}, {
"duration": 1.0,
"texture": ExtResource("5_28d7x")
}, {
"duration": 1.0,
"texture": ExtResource("6_16mt3")
}, {
"duration": 1.0,
"texture": ExtResource("7_c882e")
}, {
"duration": 1.0,
"texture": ExtResource("8_8mdfi")
}, {
"duration": 1.0,
"texture": ExtResource("9_mq21t")
}, {
"duration": 1.0,
"texture": ExtResource("10_5l0sg")
}, {
"duration": 1.0,
"texture": ExtResource("11_031wn")
}, {
"duration": 1.0,
"texture": ExtResource("12_swo43")
}, {
"duration": 1.0,
"texture": ExtResource("13_2fmam")
}, {
"duration": 1.0,
"texture": ExtResource("14_o2vrr")
}, {
"duration": 1.0,
"texture": ExtResource("15_k0nwp")
}, {
"duration": 1.0,
"texture": ExtResource("16_n1j84")
}, {
"duration": 1.0,
"texture": ExtResource("17_vmyiy")
}, {
"duration": 1.0,
"texture": ExtResource("18_f6hyo")
}, {
"duration": 1.0,
"texture": ExtResource("19_yesgn")
}, {
"duration": 1.0,
"texture": ExtResource("20_ufvly")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Actividad01" type="Node2D"]
script = ExtResource("1_cd5ww")
metadata/_edit_horizontal_guides_ = [-164.0]

[node name="Background" type="AnimatedSprite2D" parent="."]
modulate = Color(0.209908, 0.209908, 0.209908, 1)
scale = Vector2(2.4, 1.8)
sprite_frames = SubResource("SpriteFrames_cqqxp")
frame_progress = 0.278974
centered = false

[node name="Borde" type="Sprite2D" parent="."]
texture = ExtResource("21_kvr8a")
centered = false

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(1046, 539)
texture = ExtResource("22_3cos1")

[node name="EncuestaDos" type="Sprite2D" parent="."]
visible = false
position = Vector2(1276, 607)
texture = ExtResource("29_bp2aq")

[node name="EncuestaUno" type="Sprite2D" parent="."]
visible = false
position = Vector2(801, 607)
texture = ExtResource("30_7wokn")

[node name="Titila2023" parent="." instance=ExtResource("35_w7jnl")]
self_modulate = Color(1, 1, 1, 0.376471)
position = Vector2(88, 173)
scale = Vector2(0.786925, 1.70093)
color = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="Titila2024" parent="." instance=ExtResource("35_w7jnl")]
self_modulate = Color(1, 1, 1, 0.376471)
position = Vector2(82, 576)
scale = Vector2(0.786925, 1.70093)
color = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="CarpetaDosBien" type="Sprite2D" parent="."]
visible = false
position = Vector2(252, 741)
texture = ExtResource("31_xct85")

[node name="CarpetaUnoBien" type="Sprite2D" parent="."]
visible = false
position = Vector2(252, 335)
texture = ExtResource("32_6soqr")

[node name="Destino" parent="." instance=ExtResource("3_64hak")]
position = Vector2(804, 600)
imagen = ExtResource("4_h2gvu")

[node name="Destino2" parent="." instance=ExtResource("3_64hak")]
position = Vector2(1280, 600)
clave = "clave1"
imagen = ExtResource("6_khidi")

[node name="Arrastrable" parent="." instance=ExtResource("1_4v3nf")]
position = Vector2(247, 327)
imagen = ExtResource("2_kqid0")
color = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="Arrastrable2" parent="." instance=ExtResource("1_4v3nf")]
position = Vector2(247, 729)
clave_objetivo = "clave1"
imagen = ExtResource("7_ufosa")
color = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="Info" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("35_v2p63")
centered = false

[node name="Titila" parent="." instance=ExtResource("35_w7jnl")]
visible = false
light_mask = 128
visibility_layer = 128
position = Vector2(892, 572)
scale = Vector2(0.40678, 0.35514)
color = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="BotonS" parent="." instance=ExtResource("36_84els")]
visible = false
offset_left = 910.0
offset_top = 589.0
offset_right = 1038.0
offset_bottom = 634.0
color = Color(0.0745098, 0.866667, 0.0588235, 1)
texto = "CERRAR"

[node name="Arrastrar" parent="." instance=ExtResource("35_4na0n")]
modulate = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="Tiempo" type="Timer" parent="."]
wait_time = 3.6
one_shot = true

[connection signal="posicionado" from="Arrastrable" to="." method="_on_arrastrable_posicionado"]
[connection signal="posicionado" from="Arrastrable2" to="." method="_on_arrastrable_2_posicionado"]
[connection signal="button_down" from="BotonS" to="." method="_on_boton_s_button_down"]
[connection signal="timeout" from="Tiempo" to="." method="_on_tiempo_timeout"]
